# SFML-Project

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Main.cpp  Util.cpp  Util.hpp
src/components/: Sprite.cpp  Sprite.hpp  Transform.hpp  Transform2D.hpp
src/utilities/: Vector2.hpp
